name:                export
version:             0.0.0
synopsis:            turn a haskell function into (1) a server, (2) a command line interface, or (3) a foreign C export.
description:         turn a haskell function into (1) a server, (2) a command line interface, or (3) a foreign C export.
homepage:            http://github.com/sboosali/export#readme
license:             BSD3
license-file:        LICENSE
author:              Spiros Boosalis
maintainer:          samboosalis@gmail.com
copyright:           2016 Spiros Boosalis
category:            TODO
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/sboosali/export


library
 hs-source-dirs:      sources
 default-language:    Haskell2010
 ghc-options:         -Wall -fno-warn-unticked-promoted-constructors
 default-extensions: AutoDeriveTypeable DeriveDataTypeable DeriveGeneric
                     DeriveFunctor DeriveFoldable DeriveTraversable
                     LambdaCase EmptyCase TypeOperators PostfixOperators
                     ViewPatterns BangPatterns KindSignatures
                     NamedFieldPuns RecordWildCards TupleSections
                     MultiWayIf DoAndIfThenElse EmptyDataDecls Arrows
                     MultiParamTypeClasses FlexibleContexts FlexibleInstances
                     TypeFamilies FunctionalDependencies
                     ScopedTypeVariables StandaloneDeriving

 exposed-modules:
  Export
  Export.Marshall
  Export.Function
  Export.Curry

  -- for haddocks
  Export.Vinyl

  -- for executable
  Export.Main

 other-modules:
  Export.Extra
  -- Export.Types

 build-depends:
    base >=4.7 && <5
  , transformers ==0.4.*
  -- , mtl
  -- , containers
  , bytestring
  -- , stm
  -- , template-haskell

  , vinyl
  , deepseq
  , semigroups
  , tagged
  -- , lens
  -- , exceptions
  -- , free
  -- , bifunctors
  -- , profunctors
  -- , either
  -- , pipes
  -- , formatting
  -- , servant
  -- , Earley
  -- , split
  -- , interpolatedstring-perl6
  -- , wl-pprint-text
  , text
  , aeson
  -- , hashable
  -- , unordered-containers
  -- , async
  -- , parallel

-- $ stack exec export-example
executable export-example
 hs-source-dirs:      executables
 main-is:             Main.hs

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , export


-- $ stack test doctest
test-suite doctest
 hs-source-dirs:      tests
 main-is:             DocTest.hs
 type:                exitcode-stdio-1.0

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , export
  , doctest


-- $ stack test unittest
test-suite unittest
 hs-source-dirs:      tests
 main-is:             UnitTest.hs
 type:                exitcode-stdio-1.0

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 other-modules:
  Export.Test

 build-depends:
    base
  , export
  , hspec ==2.2.*
  , QuickCheck ==2.8.*
  -- , tasty
  -- , tasty-quickcheck


-- $ stack bench
benchmark command
 hs-source-dirs:      benchmarks
 main-is:             Bench.hs
 type:                exitcode-stdio-1.0

 default-language: Haskell2010
 ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , export
  , criterion
  , deepseq
